--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ addons:
 env:
 - SERVER_IP_ADDRESS=123.207.16.175
 before_install:
-- openssl aes-256-cbc -K $encrypted_7f10c3f38dd5_key -iv $encrypted_7f10c3f38dd5_iv -in deploy_key.enc -out deploy_key -d
+- openssl aes-256-cbc -K $encrypted_7f10c3f38dd5_key -iv $encrypted_7f10c3f38dd5_iv
+  -in deploy_key.enc -out deploy_key -d
 - chmod 600 ./deploy_key
 - echo -e "Host $SERVER_IP_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 after_success:
